--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ social-network-links:
   rss: true
   email: "amir.seyvani@gmail.com"
   github: "amirseyvani"    # eg. daattali
-  linkedin: "amir-seyvani-asl"  # eg. daattali
+  linkedin: "amir-seyvani-asl-1720a053"  # eg. daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
