--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ navbar-links:
   About Me: "aboutme"
   Presentations:
     - Level 5 Leadership: "http://amirseyvani.github.io/Level5Leadership/"
-    - Joint R & D : https://amirseyvani.github.io/JointR-D/
-    - ReveloutinaryWealth :https://amirseyvani.github.io/ReveloutinaryWealth/
+    - Joint R & D : "https://amirseyvani.github.io/JointR-D/"
+    - Reveloutinary Wealth :"https://amirseyvani.github.io/ReveloutinaryWealth/"
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
 avatar: "/img/avatar.jpg"
