--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ navbar-links:
   About Me: "aboutme"
   Presentations:
     - Level 5 Leadership: "http://amirseyvani.github.io/Level5Leadership/"
-    - Joint R & D : "https://amirseyvani.github.io/JointR-D/"
+    - Joint R&D : "https://amirseyvani.github.io/JointR-D/"
     - Reveloutinary Wealth : "https://amirseyvani.github.io/ReveloutinaryWealth/"
   CV: "cv"
 # Image to show in the navigation bar - image must be a square (width = height)
@@ -95,9 +95,9 @@ share-links-active:
   twitter: false
   facebook: false
   google: false
-  linkedin: true
-  github: true
-  email: true
+  linkedin: false
+  github: false
+  email: false
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
